--- a/www.nass.gov.ng/9126db741cb9da37fc8f926acb20106ebe2be03e.yml
+++ b/www.nass.gov.ng/9126db741cb9da37fc8f926acb20106ebe2be03e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:16:17 GMT
+    - Mon, 19 Jun 2017 12:54:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CA3v0pxCLldkkIKG4Wlgf1; path=/
+    - PHPSESSID=xOiavQWJ90-EVJYbESO2J0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:16:17 GMT
+recorded_at: Mon, 19 Jun 2017 12:54:31 GMT
