--- a/www.nass.gov.ng/582557c62f5d523810a7a1fa2fbb52fd343b87e7.yml
+++ b/www.nass.gov.ng/582557c62f5d523810a7a1fa2fbb52fd343b87e7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:18:03 GMT
+    - Mon, 19 Jun 2017 12:56:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jouQfmbkROREeMH1zBe0N0; path=/
+    - PHPSESSID=Ba8-%2CqtZ37kl5hPuWpzGj0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:18:03 GMT
+recorded_at: Mon, 19 Jun 2017 12:56:52 GMT
