--- a/www.nass.gov.ng/43e341d81361b01b02276ceea0329c0c7f913df1.yml
+++ b/www.nass.gov.ng/43e341d81361b01b02276ceea0329c0c7f913df1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:19:15 GMT
+    - Mon, 19 Jun 2017 12:57:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BRSiUV6aN1FMm%2CDz0pN2M2; path=/
+    - PHPSESSID=JJ0mYt%2CjqZ8g3p%2Ce%2CoQU52; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:19:15 GMT
+recorded_at: Mon, 19 Jun 2017 12:57:58 GMT
