--- a/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
+++ b/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:19:55 GMT
+    - Mon, 19 Jun 2017 12:58:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=g75hgAwjPDSGDs1YM%2Cceh1; path=/
+    - PHPSESSID=lO8yFA%2CtIOS-RNnZHtYKX0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:19:55 GMT
+recorded_at: Mon, 19 Jun 2017 12:58:29 GMT
