--- a/www.nass.gov.ng/2d79be661077c569c931ceb706ba2120e5a4355b.yml
+++ b/www.nass.gov.ng/2d79be661077c569c931ceb706ba2120e5a4355b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:21:02 GMT
+    - Mon, 19 Jun 2017 12:59:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cXA1lveI-Jzv4k2bmztDo2; path=/
+    - PHPSESSID=pclLRw3yIYz5SD3wEz%2Cvz0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:21:02 GMT
+recorded_at: Mon, 19 Jun 2017 12:59:43 GMT
