--- a/www.nass.gov.ng/66908c81f871684913e6313fd6ffdd48f325c222.yml
+++ b/www.nass.gov.ng/66908c81f871684913e6313fd6ffdd48f325c222.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:21:32 GMT
+    - Mon, 19 Jun 2017 13:00:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=auzQFHX8Uo-sisi4-jyh22; path=/
+    - PHPSESSID=5o1MuPPq%2CGj%2CSJGL82zX01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:21:32 GMT
+recorded_at: Mon, 19 Jun 2017 13:00:29 GMT
