--- a/www.nass.gov.ng/69a48311a7cfba996bf1a3951c9eb4e4ea4e481f.yml
+++ b/www.nass.gov.ng/69a48311a7cfba996bf1a3951c9eb4e4ea4e481f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:23:19 GMT
+    - Mon, 19 Jun 2017 13:01:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-GHwbzwMwOdQGxIJNbXv%2C0; path=/
+    - PHPSESSID=7ABJ%2CfqX1VYpM9h5tF3D10; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:23:19 GMT
+recorded_at: Mon, 19 Jun 2017 13:01:57 GMT
