--- a/www.nass.gov.ng/c70744f94a2418107107f5853085bc0762554320.yml
+++ b/www.nass.gov.ng/c70744f94a2418107107f5853085bc0762554320.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:26:17 GMT
+    - Mon, 19 Jun 2017 13:04:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=I848Jp6fvM-EjRB%2CCTQzw2; path=/
+    - PHPSESSID=xqlohoNvN5II4X8YY0J7j0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:26:17 GMT
+recorded_at: Mon, 19 Jun 2017 13:04:11 GMT
