--- a/www.nass.gov.ng/682f5b1270d522b821f26c13476fbddd817f85bc.yml
+++ b/www.nass.gov.ng/682f5b1270d522b821f26c13476fbddd817f85bc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:33:47 GMT
+    - Mon, 19 Jun 2017 13:10:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kxM5rue7d4%2C9Tlp0gSjCD3; path=/
+    - PHPSESSID=vkttAO6eK6fSfTCHS2GTr1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:33:47 GMT
+recorded_at: Mon, 19 Jun 2017 13:10:32 GMT
