--- a/www.nass.gov.ng/eabb9d2ca0da5a52b2eb24d40c88eea8c4845cbe.yml
+++ b/www.nass.gov.ng/eabb9d2ca0da5a52b2eb24d40c88eea8c4845cbe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:35:31 GMT
+    - Mon, 19 Jun 2017 13:11:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ME5ooL1tc8-Fas06G%2CEvt0; path=/
+    - PHPSESSID=W3vCtiwslVdDaBRAtTVcF3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:35:31 GMT
+recorded_at: Mon, 19 Jun 2017 13:11:28 GMT
