--- a/www.nass.gov.ng/67f991cdaed5c8c1f857da2dc539c7640c53ae8e.yml
+++ b/www.nass.gov.ng/67f991cdaed5c8c1f857da2dc539c7640c53ae8e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:40:45 GMT
+    - Mon, 19 Jun 2017 13:16:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RLMNSow2fgU5pvhz%2CEG5E0; path=/
+    - PHPSESSID=GptSw-ANTmBKLswfSw0dR3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:40:46 GMT
+recorded_at: Mon, 19 Jun 2017 13:16:22 GMT
