--- a/www.nass.gov.ng/f8772fcbfd41176885498c0b48717bdd30dbb3cb.yml
+++ b/www.nass.gov.ng/f8772fcbfd41176885498c0b48717bdd30dbb3cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:41:38 GMT
+    - Mon, 19 Jun 2017 13:17:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ehgkhsyOrxcvh4Wmv0Q8r0; path=/
+    - PHPSESSID=bhMih-RHUf6Fe78iqXN%2Cs3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:41:39 GMT
+recorded_at: Mon, 19 Jun 2017 13:17:44 GMT
