--- a/www.nass.gov.ng/b9c19db7c875fe1a34cbffd022cbb27ab7d932f4.yml
+++ b/www.nass.gov.ng/b9c19db7c875fe1a34cbffd022cbb27ab7d932f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:42:00 GMT
+    - Mon, 19 Jun 2017 13:18:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=L3ujncZt5BoUuycy%2C%2C5jC1; path=/
+    - PHPSESSID=K0HiUkvnw19j36TXlk2kG2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:42:01 GMT
+recorded_at: Mon, 19 Jun 2017 13:18:30 GMT
