--- a/www.nass.gov.ng/280b97d0b8eac21d02bac4519dbe75fea12e6096.yml
+++ b/www.nass.gov.ng/280b97d0b8eac21d02bac4519dbe75fea12e6096.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:42:22 GMT
+    - Mon, 19 Jun 2017 13:18:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oWDxAy2VtG66Ql9jwx8sS1; path=/
+    - PHPSESSID=HrCyHvPc%2CCzidUZeGbytm3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:42:22 GMT
+recorded_at: Mon, 19 Jun 2017 13:18:47 GMT
