--- a/www.nass.gov.ng/45ae3d777fa62a9816a5a152dff6fd58c3640b4b.yml
+++ b/www.nass.gov.ng/45ae3d777fa62a9816a5a152dff6fd58c3640b4b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:45:25 GMT
+    - Mon, 19 Jun 2017 13:22:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ztuzVhN4aUOiy2B25zW%2C32; path=/
+    - PHPSESSID=iEf35Gscbcy2MwBUzyHcy2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:45:25 GMT
+recorded_at: Mon, 19 Jun 2017 13:22:12 GMT
