--- a/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
+++ b/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:45:56 GMT
+    - Mon, 19 Jun 2017 13:23:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4KP4xEGQeTRQ1DVVuLWxT0; path=/
+    - PHPSESSID=qrkDpd0PjwGM7YXWI%2Cc5p1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:45:56 GMT
+recorded_at: Mon, 19 Jun 2017 13:23:11 GMT
