--- a/www.nass.gov.ng/33395167a5bb436c7b948cc0a41e9784244c5c8c.yml
+++ b/www.nass.gov.ng/33395167a5bb436c7b948cc0a41e9784244c5c8c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:47:33 GMT
+    - Mon, 19 Jun 2017 13:24:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ETcPJLGrY%2CPByxKk2py6L0; path=/
+    - PHPSESSID=-aMRaydPtiBQOpWc2ag8t2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:47:33 GMT
+recorded_at: Mon, 19 Jun 2017 13:24:04 GMT
