--- a/www.nass.gov.ng/a4b54c24c3dbe16091bf890570a1dcc26d1da53c.yml
+++ b/www.nass.gov.ng/a4b54c24c3dbe16091bf890570a1dcc26d1da53c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:50:08 GMT
+    - Mon, 19 Jun 2017 13:26:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Czpxxq2MVFnPl5y7gRmI51; path=/
+    - PHPSESSID=8wd0ioZfAXo2%2CacZ8Zj4r2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:50:09 GMT
+recorded_at: Mon, 19 Jun 2017 13:26:13 GMT
