--- a/www.nass.gov.ng/71920b2c5cd0e99e873307503d285f57b67ffeaf.yml
+++ b/www.nass.gov.ng/71920b2c5cd0e99e873307503d285f57b67ffeaf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:52:46 GMT
+    - Mon, 19 Jun 2017 13:29:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N-BbcnsiB9U1LiRx0dwfr0; path=/
+    - PHPSESSID=D8zFUzNvu4p%2CeEpYH448%2C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:52:46 GMT
+recorded_at: Mon, 19 Jun 2017 13:29:19 GMT
