--- a/www.nass.gov.ng/b317aaacb0731e9f3d8deaa4413c35b8ceaa3f60.yml
+++ b/www.nass.gov.ng/b317aaacb0731e9f3d8deaa4413c35b8ceaa3f60.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:53:41 GMT
+    - Mon, 19 Jun 2017 13:29:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4vkOaZBprwPtqskFBrGqv0; path=/
+    - PHPSESSID=x3ypEHKtN5EpkeakWp%2C%2Cv1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:53:41 GMT
+recorded_at: Mon, 19 Jun 2017 13:29:48 GMT
