--- a/www.nass.gov.ng/0e65f74ada4cd83f37dc32c82621731294a4e28e.yml
+++ b/www.nass.gov.ng/0e65f74ada4cd83f37dc32c82621731294a4e28e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:59:27 GMT
+    - Mon, 19 Jun 2017 13:35:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PI9zzAjEhFGOK7A-gXRnk0; path=/
+    - PHPSESSID=ywndkzoimpdg-fY3%2CpB8e1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:59:28 GMT
+recorded_at: Mon, 19 Jun 2017 13:35:29 GMT
