--- a/www.nass.gov.ng/41bb896de8adb4458a2779c82cb42fff5823497e.yml
+++ b/www.nass.gov.ng/41bb896de8adb4458a2779c82cb42fff5823497e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:59:44 GMT
+    - Mon, 19 Jun 2017 13:35:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CgFDqz3NETVzzJFDcta4B0; path=/
+    - PHPSESSID=N-B6byH%2CMBU7q3w0mFaID0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:59:45 GMT
+recorded_at: Mon, 19 Jun 2017 13:35:51 GMT
