--- a/www.nass.gov.ng/6cc0c221cc818937c28e09512a48b09908d9ac78.yml
+++ b/www.nass.gov.ng/6cc0c221cc818937c28e09512a48b09908d9ac78.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:01:14 GMT
+    - Mon, 19 Jun 2017 13:38:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Iff1%2CkaU%2C1P0s5P8jk0nc1; path=/
+    - PHPSESSID=5a7PLomTD9Kgc6XLXtDF53; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:01:14 GMT
+recorded_at: Mon, 19 Jun 2017 13:38:27 GMT
