--- a/www.nass.gov.ng/da5a6c53569eb8eac1cb38a2aca8f09d5ba7f884.yml
+++ b/www.nass.gov.ng/da5a6c53569eb8eac1cb38a2aca8f09d5ba7f884.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:12:55 GMT
+    - Mon, 19 Jun 2017 13:46:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=izVxC8xJdTcET1B3p09DR1; path=/
+    - PHPSESSID=SbtjET8%2C2MWY3O6UHgmn83; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:12:55 GMT
+recorded_at: Mon, 19 Jun 2017 13:46:27 GMT
