--- a/www.nass.gov.ng/f474511667a5a0d2209ded44531ce8192effd64b.yml
+++ b/www.nass.gov.ng/f474511667a5a0d2209ded44531ce8192effd64b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:14:16 GMT
+    - Mon, 19 Jun 2017 13:47:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FAjwHm0sXo2y-p4QDfyH11; path=/
+    - PHPSESSID=XCTTQaugJTj%2Ci-MEqWyhE0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:14:16 GMT
+recorded_at: Mon, 19 Jun 2017 13:47:56 GMT
