--- a/www.nass.gov.ng/513234a44c43df2d38246dcd5d0c8e50836086e9.yml
+++ b/www.nass.gov.ng/513234a44c43df2d38246dcd5d0c8e50836086e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:16:37 GMT
+    - Mon, 19 Jun 2017 13:50:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eKEV4FkBib%2C4t9urxbFPb1; path=/
+    - PHPSESSID=ABcjfhlpnGkIILds0F%2CIC1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:16:37 GMT
+recorded_at: Mon, 19 Jun 2017 13:50:26 GMT
