--- a/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.yml
+++ b/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:18:40 GMT
+    - Mon, 19 Jun 2017 13:54:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VIlaLoPnw5Xk4byYK%2CDi41; path=/
+    - PHPSESSID=gia7CGQh8SNgK3p4wpkpl3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:18:40 GMT
+recorded_at: Mon, 19 Jun 2017 13:54:10 GMT
