--- a/www.nass.gov.ng/bee87c5d50858d964510c6225b5f11353caad010.yml
+++ b/www.nass.gov.ng/bee87c5d50858d964510c6225b5f11353caad010.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:18:58 GMT
+    - Mon, 19 Jun 2017 13:54:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=j0tOgPTz5fbRev2IQ2Vhg2; path=/
+    - PHPSESSID=hwhzMKuXWyU6M%2CMKRSjuy3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:18:58 GMT
+recorded_at: Mon, 19 Jun 2017 13:54:36 GMT
