--- a/www.nass.gov.ng/d0ef33c494096c566339f3814f33d81e376367f4.yml
+++ b/www.nass.gov.ng/d0ef33c494096c566339f3814f33d81e376367f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:21:38 GMT
+    - Mon, 19 Jun 2017 13:58:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1ejDLZLgw-nrqaFd%2CES7f1; path=/
+    - PHPSESSID=PirGPzBTK2U8VMxDTddZ-3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:21:38 GMT
+recorded_at: Mon, 19 Jun 2017 13:58:02 GMT
