--- a/www.nass.gov.ng/b98be1d86f7c968268625792f9496a7c92d209ca.yml
+++ b/www.nass.gov.ng/b98be1d86f7c968268625792f9496a7c92d209ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:23:38 GMT
+    - Mon, 19 Jun 2017 13:59:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nUWDuhxqo654pm48T-znk3; path=/
+    - PHPSESSID=0%2CcibK%2C-FEMROLi5mEdXQ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:23:38 GMT
+recorded_at: Mon, 19 Jun 2017 13:59:46 GMT
