--- a/www.nass.gov.ng/59c82d26c7e5578cbcf9f5aba602d15eeae0adf7.yml
+++ b/www.nass.gov.ng/59c82d26c7e5578cbcf9f5aba602d15eeae0adf7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:25:08 GMT
+    - Mon, 19 Jun 2017 14:01:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bh2ce4qo7i1gT7t1Dv7a-1; path=/
+    - PHPSESSID=%2C%2ChfL%2CjHyrtd-E7-kaYV61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:25:08 GMT
+recorded_at: Mon, 19 Jun 2017 14:01:14 GMT
