--- a/www.nass.gov.ng/ddf2da29e12848a0a8deabb49851b8608c2ae342.yml
+++ b/www.nass.gov.ng/ddf2da29e12848a0a8deabb49851b8608c2ae342.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:28:13 GMT
+    - Mon, 19 Jun 2017 14:05:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Rndqn9Qd%2Cm55OiZUIHUwA3; path=/
+    - PHPSESSID=BJ8jREW5AmgivHOT7fz%2Ca3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:28:13 GMT
+recorded_at: Mon, 19 Jun 2017 14:05:21 GMT
