--- a/www.nass.gov.ng/d1071cf050b2d3405f6db59a5513ef9e5231222b.yml
+++ b/www.nass.gov.ng/d1071cf050b2d3405f6db59a5513ef9e5231222b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:28:59 GMT
+    - Mon, 19 Jun 2017 14:05:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mgqghVbCZuYez9hLvnOXB3; path=/
+    - PHPSESSID=QdS-DGk%2C4OvrID4u8s6MJ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:28:59 GMT
+recorded_at: Mon, 19 Jun 2017 14:05:40 GMT
