--- a/www.nass.gov.ng/b6e10f2ae6b49d52dd64ca9d508600fd7dab7211.yml
+++ b/www.nass.gov.ng/b6e10f2ae6b49d52dd64ca9d508600fd7dab7211.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:36:32 GMT
+    - Mon, 19 Jun 2017 14:14:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ndD3FnaS6rvUZ7F1gar7r0; path=/
+    - PHPSESSID=GVovGPhWOSxnj7Xosqv%2Cv2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:36:32 GMT
+recorded_at: Mon, 19 Jun 2017 14:14:30 GMT
