--- a/www.nass.gov.ng/482af8eeb10d9e8147427635409459291270cb47.yml
+++ b/www.nass.gov.ng/482af8eeb10d9e8147427635409459291270cb47.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:38:28 GMT
+    - Mon, 19 Jun 2017 14:16:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DxmZCg4yRCejtkOP4jiKu2; path=/
+    - PHPSESSID=YePPlh%2CiUII0TDLvn395W0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:38:28 GMT
+recorded_at: Mon, 19 Jun 2017 14:16:54 GMT
