--- a/www.nass.gov.ng/6567f12767ab7c8182d32c5528e63f0d7b217854.yml
+++ b/www.nass.gov.ng/6567f12767ab7c8182d32c5528e63f0d7b217854.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:41:17 GMT
+    - Mon, 19 Jun 2017 14:19:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=v2seiicihOSIRszrvcch32; path=/
+    - PHPSESSID=Lxlr%2CXpjm%2C-Ayx17PCn%2CS3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:41:17 GMT
+recorded_at: Mon, 19 Jun 2017 14:19:23 GMT
