--- a/www.nass.gov.ng/9bf9e56df2e1ebc8f03f57d13caff2d43a5ef812.yml
+++ b/www.nass.gov.ng/9bf9e56df2e1ebc8f03f57d13caff2d43a5ef812.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:41:50 GMT
+    - Mon, 19 Jun 2017 14:19:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RS4FUCg1hMcCvXqpMsFkt1; path=/
+    - PHPSESSID=Lwc%2C7WyKm1YEXb%2CXnFo4e3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:41:50 GMT
+recorded_at: Mon, 19 Jun 2017 14:19:45 GMT
