--- a/www.nass.gov.ng/c20b15ef02c4776e2a700938f273c516dc12c256.yml
+++ b/www.nass.gov.ng/c20b15ef02c4776e2a700938f273c516dc12c256.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:43:19 GMT
+    - Mon, 19 Jun 2017 14:21:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=002CAT5pYJ5OeLAg3RUZg2; path=/
+    - PHPSESSID=2mjQTGEzqhg7%2CRPWl12qK1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:43:19 GMT
+recorded_at: Mon, 19 Jun 2017 14:21:04 GMT
